--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -12,6 +12,19 @@
   margin: 2rem 0;
 }
 
+button.add-order {
+  margin-top: 1rem;
+  height: 23%;
+  width: 90px
+}
+
+.button-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 80%;
+}
+
 .basket {
   width: 100%;
 }
