--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,6 +4,14 @@
   flex-wrap: wrap;
 }
 
+.products-container {
+  flex: 6;
+  margin: 0 -5%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 button {
   background-color: #666;
   color: #fff;
