--- a/src/styles/orders.css
+++ b/src/styles/orders.css
@@ -27,6 +27,11 @@
   margin: 1rem;
 }
 
+#order_number {
+  margin: 3% 0;
+  border-radius: 5px;
+}
+
 #order_button:hover {
   background-color: #444;
   cursor: pointer;
@@ -34,6 +39,10 @@
 
 #order_button:focus {
   background-color: #444;
+}
+
+#order_number {
+  margin-right: 2%;
 }
 
 table {
