--- a/src/styles/orders.css
+++ b/src/styles/orders.css
@@ -12,12 +12,18 @@
   font-size: 1.5rem;
 }
 
-.form_container {
+.order_container {
   margin-top: 2rem;
   font-size: 1.1rem;
 }
 
-.form_container #order_button {
+.form_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#order_button {
   background-color: #666;
   color: #fff;
   max-width: 8rem;
@@ -27,27 +33,21 @@
   margin: 1rem;
 }
 
+.table-container {
+  height: auto;
+  margin-bottom: 5%;
+}
+
 #order_number {
   margin: 3% 0;
   border-radius: 5px;
 }
 
-#order_button:hover {
-  background-color: #444;
-  cursor: pointer;
-}
-
-#order_button:focus {
-  background-color: #444;
-}
-
-#order_number {
-  margin-right: 2%;
-}
-
 table {
   width: 100%;
   margin-left: -1.3%;
+  margin-bottom: 3%;
+  border-collapse: collapse;
 }
 
 th, td {
@@ -55,17 +55,9 @@ th, td {
   text-align: left;
 }
 
-td {
-  max-width: 100px;
-  word-wrap: break-word;
-}
-
-#id_order {
-  font-size: 30px;
-}
-
-table {
-  border-collapse: collapse;
+.order-price {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .table_rows {
